--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     
     <header>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html">
+            <img src="./images/logo.png" alt="логотип компании: web studio">            
+        </a>
         <nav>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -93,7 +95,20 @@
     </section>
     </main>
     <footer>
-        
+        <img src="./images/logoinfooter.png" alt="логотип компании">Studio
+        <address>
+            <ul>
+                <li>
+                    г. Киев, пр-т Леси Украинки, 26
+                </li>
+                <li>
+                    <a href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li>
+                    <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 
 </body>
