--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     </section>
     </main>
     <footer>
-        <img src="./images/logoinfooter.png" alt="логотип компании">Studio
+        <a href="./index.html">
+            <img src="./images/logoinfooter.png" alt="логотип компании">Studio
+        </a>
         <address>
             <ul>
                 <li>
