--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     
     <header>
-        <a href="./index.html">
-            <img src="./images/logo.png" alt="логотип компании: web studio">            
-        </a>
         <nav>
+            <a href="./index.html">
+                WebStudio
+            </a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -58,13 +58,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="./images/img.jpg" alt="парень за компютером">
+                <img src="./images/img.jpg" alt="парень за компютером" width="370">
             </li>
             <li>
-                <img src="./images/photo.jpg" alt="девушка за ноутбуком">
+                <img src="./images/photo.jpg" alt="девушка за ноутбуком" width="370">
             </li>
             <li>
-                <img src="./images/work.jpg" alt="дизайнер работает над проектом">
+                <img src="./images/work.jpg" alt="дизайнер работает над проектом" width="370">
             </li>
         </ul>
     </section>
@@ -72,22 +72,22 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="./images/comand1.jpg" alt="член команды">
+                <img src="./images/comand1.jpg" alt="член команды" width="270">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/comand2.jpg" alt="член команды">
+                <img src="./images/comand2.jpg" alt="член команды" width="270">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/comand3.jpg" alt="член команды">
+                <img src="./images/comand3.jpg" alt="член команды" width="270">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/comand4.jpg" alt="член команды">
+                <img src="./images/comand4.jpg" alt="член команды" width="270">
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
@@ -96,7 +96,7 @@
     </main>
     <footer>
         <a href="./index.html">
-            <img src="./images/logoinfooter.png" alt="логотип компании">Studio
+            WebStudio
         </a>
         <address>
             <ul>
